convert classes into records